# zephyr-mcubootapp

./: CMakeLists.txt  Kconfig  Kconfig.defconfig  README.rst  flash_map_template.json  keys.c  mcubootapp_template.ld  west.yml
app/: CMakeLists.txt  prj.conf
scripts/: requirements.txt
snippets/mcubootapp/: cyw920829m2evk_02.overlay  snippet.yml
zephyr/: module.yml
